parser.output
Terminals which are not used

   TIDENTIFIER
   TINTEGER
   TDOUBLE
   TNEG
   TLCHAN
   TRCHAN
   TCOMMA
   TDOT
   TSEMI
   TKFOR
   TKIF
   TKELSE
   TDINT
   TDFLOAT
   TDBOOL
   TDSTRING
   MultiCommentBegin
   MultiCommentEnd


State 72 conflicts: 15 shift/reduce
State 74 conflicts: 15 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PackageDefinition Imports Declaration MainFunc
    2        | PackageDefinition Declaration MainFunc

    3 PackageDefinition: TKPACKAGE TKMAIN TTERM
    4                  | TKPACKAGE Identifier TTERM

    5 Imports: SingleImports TKIMPORT String TTERM

    6 SingleImports: SingleImports TKIMPORT String TTERM
    7              | /* empty */

    8 Declaration: VariableDecla Declaration
    9            | /* empty */

   10 VariableDecla: TKVAR Identifier TEQUAL Literal TTERM
   11              | Identifier TSEQUAL Literal TTERM

   12 Literal: BoolTrue
   13        | BoolFalse
   14        | String
   15        | Float
   16        | Int

   17 MainFunc: TKFUNC TKMAIN TLPAREN TRPAREN CompoundBloc

   18 CompoundBloc: TLBRACE TTERM StatementList TRBRACE TTERM
   19             | TLBRACE TTERM TRBRACE TTERM

   20 StatementList: Statementdash
   21              | StatementList Statementdash

   22 Statementdash: VariableDecla
   23              | Expression

   24 BinaryOperators: TCEQ
   25                | TCNE
   26                | TBAND
   27                | TBOR
   28                | TBXOR
   29                | TAND
   30                | TOR
   31                | TCLE
   32                | TCLT
   33                | TCGT
   34                | TCGE
   35                | TMINUS
   36                | TPLUS
   37                | TMUL
   38                | TDIV

   39 Expression: Identifier TEQUAL Expression
   40           | Identifier
   41           | Literal
   42           | Expression BinaryOperators Expression
   43           | TLPAREN Expression TRPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
TIDENTIFIER (258)
TINTEGER (259)
TDOUBLE (260)
TCEQ (261) 24
TCNE (262) 25
TCLT (263) 32
TCLE (264) 31
TCGT (265) 33
TCGE (266) 34
TEQUAL (267) 10 39
TNEG (268)
TBAND (269) 26
TBOR (270) 27
TBXOR (271) 28
TAND (272) 29
TOR (273) 30
TLCHAN (274)
TRCHAN (275)
TSEQUAL (276) 11
TLPAREN (277) 17 43
TRPAREN (278) 17 43
TLBRACE (279) 18 19
TRBRACE (280) 18 19
TCOMMA (281)
TDOT (282)
TSEMI (283)
TPLUS (284) 36
TMINUS (285) 35
TMUL (286) 37
TDIV (287) 38
TKFOR (288)
TKIF (289)
TKFUNC (290) 17
TKIMPORT (291) 5 6
TKMAIN (292) 3 17
TKPACKAGE (293) 3 4
TKVAR (294) 10
TKELSE (295)
TDINT (296)
TDFLOAT (297)
TDBOOL (298)
TDSTRING (299)
BoolTrue (300) 12
BoolFalse (301) 13
String (302) 5 6 14
Float (303) 15
Int (304) 16
MultiCommentBegin (305)
MultiCommentEnd (306)
Identifier (307) 4 10 11 39 40
TTERM (308) 3 4 5 6 10 11 18 19


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1 2, on right: 0
PackageDefinition (56)
    on left: 3 4, on right: 1 2
Imports (57)
    on left: 5, on right: 1
SingleImports (58)
    on left: 6 7, on right: 5 6
Declaration (59)
    on left: 8 9, on right: 1 2 8
VariableDecla (60)
    on left: 10 11, on right: 8 22
Literal (61)
    on left: 12 13 14 15 16, on right: 10 11 41
MainFunc (62)
    on left: 17, on right: 1 2
CompoundBloc (63)
    on left: 18 19, on right: 17
StatementList (64)
    on left: 20 21, on right: 18 21
Statementdash (65)
    on left: 22 23, on right: 20 21
BinaryOperators (66)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38,
    on right: 42
Expression (67)
    on left: 39 40 41 42 43, on right: 23 39 42 43


state 0

    0 $accept: . program $end
    1 program: . PackageDefinition Imports Declaration MainFunc
    2        | . PackageDefinition Declaration MainFunc
    3 PackageDefinition: . TKPACKAGE TKMAIN TTERM
    4                  | . TKPACKAGE Identifier TTERM

    TKPACKAGE  shift, and go to state 1

    program            go to state 2
    PackageDefinition  go to state 3


state 1

    3 PackageDefinition: TKPACKAGE . TKMAIN TTERM
    4                  | TKPACKAGE . Identifier TTERM

    TKMAIN      shift, and go to state 4
    Identifier  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: PackageDefinition . Imports Declaration MainFunc
    2        | PackageDefinition . Declaration MainFunc
    5 Imports: . SingleImports TKIMPORT String TTERM
    6 SingleImports: . SingleImports TKIMPORT String TTERM
    7              | .  [TKIMPORT]
    8 Declaration: . VariableDecla Declaration
    9            | .  [TKFUNC]
   10 VariableDecla: . TKVAR Identifier TEQUAL Literal TTERM
   11              | . Identifier TSEQUAL Literal TTERM

    TKVAR       shift, and go to state 7
    Identifier  shift, and go to state 8

    TKFUNC    reduce using rule 9 (Declaration)
    $default  reduce using rule 7 (SingleImports)

    Imports        go to state 9
    SingleImports  go to state 10
    Declaration    go to state 11
    VariableDecla  go to state 12


state 4

    3 PackageDefinition: TKPACKAGE TKMAIN . TTERM

    TTERM  shift, and go to state 13


state 5

    4 PackageDefinition: TKPACKAGE Identifier . TTERM

    TTERM  shift, and go to state 14


state 6

    0 $accept: program $end .

    $default  accept


state 7

   10 VariableDecla: TKVAR . Identifier TEQUAL Literal TTERM

    Identifier  shift, and go to state 15


state 8

   11 VariableDecla: Identifier . TSEQUAL Literal TTERM

    TSEQUAL  shift, and go to state 16


state 9

    1 program: PackageDefinition Imports . Declaration MainFunc
    8 Declaration: . VariableDecla Declaration
    9            | .  [TKFUNC]
   10 VariableDecla: . TKVAR Identifier TEQUAL Literal TTERM
   11              | . Identifier TSEQUAL Literal TTERM

    TKVAR       shift, and go to state 7
    Identifier  shift, and go to state 8

    $default  reduce using rule 9 (Declaration)

    Declaration    go to state 17
    VariableDecla  go to state 12


state 10

    5 Imports: SingleImports . TKIMPORT String TTERM
    6 SingleImports: SingleImports . TKIMPORT String TTERM

    TKIMPORT  shift, and go to state 18


state 11

    2 program: PackageDefinition Declaration . MainFunc
   17 MainFunc: . TKFUNC TKMAIN TLPAREN TRPAREN CompoundBloc

    TKFUNC  shift, and go to state 19

    MainFunc  go to state 20


state 12

    8 Declaration: . VariableDecla Declaration
    8            | VariableDecla . Declaration
    9            | .  [TKFUNC]
   10 VariableDecla: . TKVAR Identifier TEQUAL Literal TTERM
   11              | . Identifier TSEQUAL Literal TTERM

    TKVAR       shift, and go to state 7
    Identifier  shift, and go to state 8

    $default  reduce using rule 9 (Declaration)

    Declaration    go to state 21
    VariableDecla  go to state 12


state 13

    3 PackageDefinition: TKPACKAGE TKMAIN TTERM .

    $default  reduce using rule 3 (PackageDefinition)


state 14

    4 PackageDefinition: TKPACKAGE Identifier TTERM .

    $default  reduce using rule 4 (PackageDefinition)


state 15

   10 VariableDecla: TKVAR Identifier . TEQUAL Literal TTERM

    TEQUAL  shift, and go to state 22


state 16

   11 VariableDecla: Identifier TSEQUAL . Literal TTERM
   12 Literal: . BoolTrue
   13        | . BoolFalse
   14        | . String
   15        | . Float
   16        | . Int

    BoolTrue   shift, and go to state 23
    BoolFalse  shift, and go to state 24
    String     shift, and go to state 25
    Float      shift, and go to state 26
    Int        shift, and go to state 27

    Literal  go to state 28


state 17

    1 program: PackageDefinition Imports Declaration . MainFunc
   17 MainFunc: . TKFUNC TKMAIN TLPAREN TRPAREN CompoundBloc

    TKFUNC  shift, and go to state 19

    MainFunc  go to state 29


state 18

    5 Imports: SingleImports TKIMPORT . String TTERM
    6 SingleImports: SingleImports TKIMPORT . String TTERM

    String  shift, and go to state 30


state 19

   17 MainFunc: TKFUNC . TKMAIN TLPAREN TRPAREN CompoundBloc

    TKMAIN  shift, and go to state 31


state 20

    2 program: PackageDefinition Declaration MainFunc .

    $default  reduce using rule 2 (program)


state 21

    8 Declaration: VariableDecla Declaration .

    $default  reduce using rule 8 (Declaration)


state 22

   10 VariableDecla: TKVAR Identifier TEQUAL . Literal TTERM
   12 Literal: . BoolTrue
   13        | . BoolFalse
   14        | . String
   15        | . Float
   16        | . Int

    BoolTrue   shift, and go to state 23
    BoolFalse  shift, and go to state 24
    String     shift, and go to state 25
    Float      shift, and go to state 26
    Int        shift, and go to state 27

    Literal  go to state 32


state 23

   12 Literal: BoolTrue .

    $default  reduce using rule 12 (Literal)


state 24

   13 Literal: BoolFalse .

    $default  reduce using rule 13 (Literal)


state 25

   14 Literal: String .

    $default  reduce using rule 14 (Literal)


state 26

   15 Literal: Float .

    $default  reduce using rule 15 (Literal)


state 27

   16 Literal: Int .

    $default  reduce using rule 16 (Literal)


state 28

   11 VariableDecla: Identifier TSEQUAL Literal . TTERM

    TTERM  shift, and go to state 33


state 29

    1 program: PackageDefinition Imports Declaration MainFunc .

    $default  reduce using rule 1 (program)


state 30

    5 Imports: SingleImports TKIMPORT String . TTERM
    6 SingleImports: SingleImports TKIMPORT String . TTERM

    TTERM  shift, and go to state 34


state 31

   17 MainFunc: TKFUNC TKMAIN . TLPAREN TRPAREN CompoundBloc

    TLPAREN  shift, and go to state 35


state 32

   10 VariableDecla: TKVAR Identifier TEQUAL Literal . TTERM

    TTERM  shift, and go to state 36


state 33

   11 VariableDecla: Identifier TSEQUAL Literal TTERM .

    $default  reduce using rule 11 (VariableDecla)


state 34

    5 Imports: SingleImports TKIMPORT String TTERM .  [TKFUNC, TKVAR, Identifier]
    6 SingleImports: SingleImports TKIMPORT String TTERM .  [TKIMPORT]

    TKIMPORT  reduce using rule 6 (SingleImports)
    $default  reduce using rule 5 (Imports)


state 35

   17 MainFunc: TKFUNC TKMAIN TLPAREN . TRPAREN CompoundBloc

    TRPAREN  shift, and go to state 37


state 36

   10 VariableDecla: TKVAR Identifier TEQUAL Literal TTERM .

    $default  reduce using rule 10 (VariableDecla)


state 37

   17 MainFunc: TKFUNC TKMAIN TLPAREN TRPAREN . CompoundBloc
   18 CompoundBloc: . TLBRACE TTERM StatementList TRBRACE TTERM
   19             | . TLBRACE TTERM TRBRACE TTERM

    TLBRACE  shift, and go to state 38

    CompoundBloc  go to state 39


state 38

   18 CompoundBloc: TLBRACE . TTERM StatementList TRBRACE TTERM
   19             | TLBRACE . TTERM TRBRACE TTERM

    TTERM  shift, and go to state 40


state 39

   17 MainFunc: TKFUNC TKMAIN TLPAREN TRPAREN CompoundBloc .

    $default  reduce using rule 17 (MainFunc)


state 40

   10 VariableDecla: . TKVAR Identifier TEQUAL Literal TTERM
   11              | . Identifier TSEQUAL Literal TTERM
   12 Literal: . BoolTrue
   13        | . BoolFalse
   14        | . String
   15        | . Float
   16        | . Int
   18 CompoundBloc: TLBRACE TTERM . StatementList TRBRACE TTERM
   19             | TLBRACE TTERM . TRBRACE TTERM
   20 StatementList: . Statementdash
   21              | . StatementList Statementdash
   22 Statementdash: . VariableDecla
   23              | . Expression
   39 Expression: . Identifier TEQUAL Expression
   40           | . Identifier
   41           | . Literal
   42           | . Expression BinaryOperators Expression
   43           | . TLPAREN Expression TRPAREN

    TLPAREN     shift, and go to state 41
    TRBRACE     shift, and go to state 42
    TKVAR       shift, and go to state 7
    BoolTrue    shift, and go to state 23
    BoolFalse   shift, and go to state 24
    String      shift, and go to state 25
    Float       shift, and go to state 26
    Int         shift, and go to state 27
    Identifier  shift, and go to state 43

    VariableDecla  go to state 44
    Literal        go to state 45
    StatementList  go to state 46
    Statementdash  go to state 47
    Expression     go to state 48


state 41

   12 Literal: . BoolTrue
   13        | . BoolFalse
   14        | . String
   15        | . Float
   16        | . Int
   39 Expression: . Identifier TEQUAL Expression
   40           | . Identifier
   41           | . Literal
   42           | . Expression BinaryOperators Expression
   43           | . TLPAREN Expression TRPAREN
   43           | TLPAREN . Expression TRPAREN

    TLPAREN     shift, and go to state 41
    BoolTrue    shift, and go to state 23
    BoolFalse   shift, and go to state 24
    String      shift, and go to state 25
    Float       shift, and go to state 26
    Int         shift, and go to state 27
    Identifier  shift, and go to state 49

    Literal     go to state 45
    Expression  go to state 50


state 42

   19 CompoundBloc: TLBRACE TTERM TRBRACE . TTERM

    TTERM  shift, and go to state 51


state 43

   11 VariableDecla: Identifier . TSEQUAL Literal TTERM
   39 Expression: Identifier . TEQUAL Expression
   40           | Identifier .  [TCEQ, TCNE, TCLT, TCLE, TCGT, TCGE, TBAND, TBOR, TBXOR, TAND, TOR, TLPAREN, TRBRACE, TPLUS, TMINUS, TMUL, TDIV, TKVAR, BoolTrue, BoolFalse, String, Float, Int, Identifier]

    TEQUAL   shift, and go to state 52
    TSEQUAL  shift, and go to state 16

    $default  reduce using rule 40 (Expression)


state 44

   22 Statementdash: VariableDecla .

    $default  reduce using rule 22 (Statementdash)


state 45

   41 Expression: Literal .

    $default  reduce using rule 41 (Expression)


state 46

   10 VariableDecla: . TKVAR Identifier TEQUAL Literal TTERM
   11              | . Identifier TSEQUAL Literal TTERM
   12 Literal: . BoolTrue
   13        | . BoolFalse
   14        | . String
   15        | . Float
   16        | . Int
   18 CompoundBloc: TLBRACE TTERM StatementList . TRBRACE TTERM
   21 StatementList: StatementList . Statementdash
   22 Statementdash: . VariableDecla
   23              | . Expression
   39 Expression: . Identifier TEQUAL Expression
   40           | . Identifier
   41           | . Literal
   42           | . Expression BinaryOperators Expression
   43           | . TLPAREN Expression TRPAREN

    TLPAREN     shift, and go to state 41
    TRBRACE     shift, and go to state 53
    TKVAR       shift, and go to state 7
    BoolTrue    shift, and go to state 23
    BoolFalse   shift, and go to state 24
    String      shift, and go to state 25
    Float       shift, and go to state 26
    Int         shift, and go to state 27
    Identifier  shift, and go to state 43

    VariableDecla  go to state 44
    Literal        go to state 45
    Statementdash  go to state 54
    Expression     go to state 48


state 47

   20 StatementList: Statementdash .

    $default  reduce using rule 20 (StatementList)


state 48

   23 Statementdash: Expression .  [TLPAREN, TRBRACE, TKVAR, BoolTrue, BoolFalse, String, Float, Int, Identifier]
   24 BinaryOperators: . TCEQ
   25                | . TCNE
   26                | . TBAND
   27                | . TBOR
   28                | . TBXOR
   29                | . TAND
   30                | . TOR
   31                | . TCLE
   32                | . TCLT
   33                | . TCGT
   34                | . TCGE
   35                | . TMINUS
   36                | . TPLUS
   37                | . TMUL
   38                | . TDIV
   42 Expression: Expression . BinaryOperators Expression

    TCEQ    shift, and go to state 55
    TCNE    shift, and go to state 56
    TCLT    shift, and go to state 57
    TCLE    shift, and go to state 58
    TCGT    shift, and go to state 59
    TCGE    shift, and go to state 60
    TBAND   shift, and go to state 61
    TBOR    shift, and go to state 62
    TBXOR   shift, and go to state 63
    TAND    shift, and go to state 64
    TOR     shift, and go to state 65
    TPLUS   shift, and go to state 66
    TMINUS  shift, and go to state 67
    TMUL    shift, and go to state 68
    TDIV    shift, and go to state 69

    $default  reduce using rule 23 (Statementdash)

    BinaryOperators  go to state 70


state 49

   39 Expression: Identifier . TEQUAL Expression
   40           | Identifier .  [TCEQ, TCNE, TCLT, TCLE, TCGT, TCGE, TBAND, TBOR, TBXOR, TAND, TOR, TLPAREN, TRPAREN, TRBRACE, TPLUS, TMINUS, TMUL, TDIV, TKVAR, BoolTrue, BoolFalse, String, Float, Int, Identifier]

    TEQUAL  shift, and go to state 52

    $default  reduce using rule 40 (Expression)


state 50

   24 BinaryOperators: . TCEQ
   25                | . TCNE
   26                | . TBAND
   27                | . TBOR
   28                | . TBXOR
   29                | . TAND
   30                | . TOR
   31                | . TCLE
   32                | . TCLT
   33                | . TCGT
   34                | . TCGE
   35                | . TMINUS
   36                | . TPLUS
   37                | . TMUL
   38                | . TDIV
   42 Expression: Expression . BinaryOperators Expression
   43           | TLPAREN Expression . TRPAREN

    TCEQ     shift, and go to state 55
    TCNE     shift, and go to state 56
    TCLT     shift, and go to state 57
    TCLE     shift, and go to state 58
    TCGT     shift, and go to state 59
    TCGE     shift, and go to state 60
    TBAND    shift, and go to state 61
    TBOR     shift, and go to state 62
    TBXOR    shift, and go to state 63
    TAND     shift, and go to state 64
    TOR      shift, and go to state 65
    TRPAREN  shift, and go to state 71
    TPLUS    shift, and go to state 66
    TMINUS   shift, and go to state 67
    TMUL     shift, and go to state 68
    TDIV     shift, and go to state 69

    BinaryOperators  go to state 70


state 51

   19 CompoundBloc: TLBRACE TTERM TRBRACE TTERM .

    $default  reduce using rule 19 (CompoundBloc)


state 52

   12 Literal: . BoolTrue
   13        | . BoolFalse
   14        | . String
   15        | . Float
   16        | . Int
   39 Expression: . Identifier TEQUAL Expression
   39           | Identifier TEQUAL . Expression
   40           | . Identifier
   41           | . Literal
   42           | . Expression BinaryOperators Expression
   43           | . TLPAREN Expression TRPAREN

    TLPAREN     shift, and go to state 41
    BoolTrue    shift, and go to state 23
    BoolFalse   shift, and go to state 24
    String      shift, and go to state 25
    Float       shift, and go to state 26
    Int         shift, and go to state 27
    Identifier  shift, and go to state 49

    Literal     go to state 45
    Expression  go to state 72


state 53

   18 CompoundBloc: TLBRACE TTERM StatementList TRBRACE . TTERM

    TTERM  shift, and go to state 73


state 54

   21 StatementList: StatementList Statementdash .

    $default  reduce using rule 21 (StatementList)


state 55

   24 BinaryOperators: TCEQ .

    $default  reduce using rule 24 (BinaryOperators)


state 56

   25 BinaryOperators: TCNE .

    $default  reduce using rule 25 (BinaryOperators)


state 57

   32 BinaryOperators: TCLT .

    $default  reduce using rule 32 (BinaryOperators)


state 58

   31 BinaryOperators: TCLE .

    $default  reduce using rule 31 (BinaryOperators)


state 59

   33 BinaryOperators: TCGT .

    $default  reduce using rule 33 (BinaryOperators)


state 60

   34 BinaryOperators: TCGE .

    $default  reduce using rule 34 (BinaryOperators)


state 61

   26 BinaryOperators: TBAND .

    $default  reduce using rule 26 (BinaryOperators)


state 62

   27 BinaryOperators: TBOR .

    $default  reduce using rule 27 (BinaryOperators)


state 63

   28 BinaryOperators: TBXOR .

    $default  reduce using rule 28 (BinaryOperators)


state 64

   29 BinaryOperators: TAND .

    $default  reduce using rule 29 (BinaryOperators)


state 65

   30 BinaryOperators: TOR .

    $default  reduce using rule 30 (BinaryOperators)


state 66

   36 BinaryOperators: TPLUS .

    $default  reduce using rule 36 (BinaryOperators)


state 67

   35 BinaryOperators: TMINUS .

    $default  reduce using rule 35 (BinaryOperators)


state 68

   37 BinaryOperators: TMUL .

    $default  reduce using rule 37 (BinaryOperators)


state 69

   38 BinaryOperators: TDIV .

    $default  reduce using rule 38 (BinaryOperators)


state 70

   12 Literal: . BoolTrue
   13        | . BoolFalse
   14        | . String
   15        | . Float
   16        | . Int
   39 Expression: . Identifier TEQUAL Expression
   40           | . Identifier
   41           | . Literal
   42           | . Expression BinaryOperators Expression
   42           | Expression BinaryOperators . Expression
   43           | . TLPAREN Expression TRPAREN

    TLPAREN     shift, and go to state 41
    BoolTrue    shift, and go to state 23
    BoolFalse   shift, and go to state 24
    String      shift, and go to state 25
    Float       shift, and go to state 26
    Int         shift, and go to state 27
    Identifier  shift, and go to state 49

    Literal     go to state 45
    Expression  go to state 74


state 71

   43 Expression: TLPAREN Expression TRPAREN .

    $default  reduce using rule 43 (Expression)


state 72

   24 BinaryOperators: . TCEQ
   25                | . TCNE
   26                | . TBAND
   27                | . TBOR
   28                | . TBXOR
   29                | . TAND
   30                | . TOR
   31                | . TCLE
   32                | . TCLT
   33                | . TCGT
   34                | . TCGE
   35                | . TMINUS
   36                | . TPLUS
   37                | . TMUL
   38                | . TDIV
   39 Expression: Identifier TEQUAL Expression .  [TCEQ, TCNE, TCLT, TCLE, TCGT, TCGE, TBAND, TBOR, TBXOR, TAND, TOR, TLPAREN, TRPAREN, TRBRACE, TPLUS, TMINUS, TMUL, TDIV, TKVAR, BoolTrue, BoolFalse, String, Float, Int, Identifier]
   42           | Expression . BinaryOperators Expression

    TCEQ    shift, and go to state 55
    TCNE    shift, and go to state 56
    TCLT    shift, and go to state 57
    TCLE    shift, and go to state 58
    TCGT    shift, and go to state 59
    TCGE    shift, and go to state 60
    TBAND   shift, and go to state 61
    TBOR    shift, and go to state 62
    TBXOR   shift, and go to state 63
    TAND    shift, and go to state 64
    TOR     shift, and go to state 65
    TPLUS   shift, and go to state 66
    TMINUS  shift, and go to state 67
    TMUL    shift, and go to state 68
    TDIV    shift, and go to state 69

    TCEQ      [reduce using rule 39 (Expression)]
    TCNE      [reduce using rule 39 (Expression)]
    TCLT      [reduce using rule 39 (Expression)]
    TCLE      [reduce using rule 39 (Expression)]
    TCGT      [reduce using rule 39 (Expression)]
    TCGE      [reduce using rule 39 (Expression)]
    TBAND     [reduce using rule 39 (Expression)]
    TBOR      [reduce using rule 39 (Expression)]
    TBXOR     [reduce using rule 39 (Expression)]
    TAND      [reduce using rule 39 (Expression)]
    TOR       [reduce using rule 39 (Expression)]
    TPLUS     [reduce using rule 39 (Expression)]
    TMINUS    [reduce using rule 39 (Expression)]
    TMUL      [reduce using rule 39 (Expression)]
    TDIV      [reduce using rule 39 (Expression)]
    $default  reduce using rule 39 (Expression)

    BinaryOperators  go to state 70


state 73

   18 CompoundBloc: TLBRACE TTERM StatementList TRBRACE TTERM .

    $default  reduce using rule 18 (CompoundBloc)


state 74

   24 BinaryOperators: . TCEQ
   25                | . TCNE
   26                | . TBAND
   27                | . TBOR
   28                | . TBXOR
   29                | . TAND
   30                | . TOR
   31                | . TCLE
   32                | . TCLT
   33                | . TCGT
   34                | . TCGE
   35                | . TMINUS
   36                | . TPLUS
   37                | . TMUL
   38                | . TDIV
   42 Expression: Expression . BinaryOperators Expression  [TCEQ, TCNE, TCLT, TCLE, TCGT, TCGE, TBAND, TBOR, TBXOR, TAND, TOR, TLPAREN, TRPAREN, TRBRACE, TPLUS, TMINUS, TMUL, TDIV, TKVAR, BoolTrue, BoolFalse, String, Float, Int, Identifier]
   42           | Expression BinaryOperators Expression .  [TCEQ, TCNE, TCLT, TCLE, TCGT, TCGE, TBAND, TBOR, TBXOR, TAND, TOR, TLPAREN, TRPAREN, TRBRACE, TPLUS, TMINUS, TMUL, TDIV, TKVAR, BoolTrue, BoolFalse, String, Float, Int, Identifier]

    TCEQ    shift, and go to state 55
    TCNE    shift, and go to state 56
    TCLT    shift, and go to state 57
    TCLE    shift, and go to state 58
    TCGT    shift, and go to state 59
    TCGE    shift, and go to state 60
    TBAND   shift, and go to state 61
    TBOR    shift, and go to state 62
    TBXOR   shift, and go to state 63
    TAND    shift, and go to state 64
    TOR     shift, and go to state 65
    TPLUS   shift, and go to state 66
    TMINUS  shift, and go to state 67
    TMUL    shift, and go to state 68
    TDIV    shift, and go to state 69

    TCEQ      [reduce using rule 42 (Expression)]
    TCNE      [reduce using rule 42 (Expression)]
    TCLT      [reduce using rule 42 (Expression)]
    TCLE      [reduce using rule 42 (Expression)]
    TCGT      [reduce using rule 42 (Expression)]
    TCGE      [reduce using rule 42 (Expression)]
    TBAND     [reduce using rule 42 (Expression)]
    TBOR      [reduce using rule 42 (Expression)]
    TBXOR     [reduce using rule 42 (Expression)]
    TAND      [reduce using rule 42 (Expression)]
    TOR       [reduce using rule 42 (Expression)]
    TPLUS     [reduce using rule 42 (Expression)]
    TMINUS    [reduce using rule 42 (Expression)]
    TMUL      [reduce using rule 42 (Expression)]
    TDIV      [reduce using rule 42 (Expression)]
    $default  reduce using rule 42 (Expression)

    BinaryOperators  go to state 70
